
* adapted code to avoid deprecation warnings of GCC 4.2

* ChangeLogs are now generated from Texinfo documentation

* test cases using Graphviz Dot or Petrify are now skipped if the configure
  script did not find these tools

* fixed bug #12530 (`https://gna.org/bugs/?12530'): the CUDD package is now
  entirely translated with a C++ compiler to allow linking of the `new' logger

Version 3.0
===========

* Fiona now supports more service analysis scenarios
     * given an og-file Fiona generates a public view

     * given two or more open nets such that there composition does not
       behave well, Fiona can generate an adapter - either a rather small
       adapter or a most permissive adapter

     * Fiona is able to read adapter rules from file

     * given an open net file, Fiona can generate a partner open net for the
       given net - either a rather small partner or a most permissive one is
       generated

* implemented powerful preprocessing and conversion functionalities for open
  nets and OGs
     * minimization of a given OG

     * structural reduction of given open nets (reduction level can be set
       via command line)

     * normalization of given open nets

     * generation of png files of given open nets, OGs and IGs

     * given an OG, check for nodes that violate their own annotation

     * given an OG, removal of nodes that violate their own annotation

     * test, if given OG contains cycles

     * counting the number of strategies characterized by a given OG

* Fiona reads a given OG File for further processing

* the prefix of the output files can be set by command line

* Fiona may run in quite mode, i.e., produces no output files

* it is possible to tell Fiona not to generate a png-file and/ or not to
  generate any dot related output

* in case of calculating an reduced IG, it is now possible to choose which
  reduction technique is used via command line
