@@ -118,6 +118,6 @@ fiona_LDADD = $(builddir)/../libs/cudd/libobj.a \
 
 #############################################################################
 # [NL] This needs to be documented
-allcov: $(BUILT_SOURCES) fiona.h
+allcov: $(BUILT_SOURCES) config.h
 	$(MAKE) $(AM_MAKEFLAGS) CXX="$(CXXCOV)" all
 	-$(MAKE) $(AM_MAKEFLAGS) cleandeps
